@@ -6,9 +6,14 @@ if HAVE_WAND
 image_module = xineplug_decode_image.la
 endif
 
+if HAVE_GDK_PIXBUF
+gdkpixbuf_module = xineplug_decode_gdk_pixbuf.la
+endif
+
 libdir = $(XINE_PLUGINDIR)
 
 lib_LTLIBRARIES = $(image_module) \
+	$(gdkpixbuf_module) \
 	xineplug_decode_bitplane.la \
 	xineplug_decode_rgb.la \
 	xineplug_decode_yuv.la
@@ -29,3 +34,9 @@ xineplug_decode_image_la_SOURCES = image.c
 xineplug_decode_image_la_CFLAGS = $(WAND_CFLAGS)
 xineplug_decode_image_la_LIBADD = $(XINE_LIB) $(DYNAMIC_LD_LIBS) $(WAND_LIBS)
 xineplug_decode_image_la_LDFLAGS = $(WAND_LDFLAGS) -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
+
+xineplug_decode_gdk_pixbuf_la_SOURCES = gdkpixbuf.c
+xineplug_decode_gdk_pixbuf_la_CFLAGS = $(GDK_PIXBUF_CFLAGS)
+xineplug_decode_gdk_pixbuf_la_LIBADD = $(XINE_LIB) $(DYNAMIC_LD_LIBS) $(GDK_PIXBUF_LIBS)
+xineplug_decode_gdk_pixbuf_la_LDFLAGS = $(GDK_PIXBUF_LDFLAGS) -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
+
